<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solainhanduoc"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"/>
    <TextView
        android:id="@+id/txtTienLai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tongtien"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"/>
    <TextView
        android:id="@+id/txtTongTien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_a_picture"
        android:backgroundTint="@color/grey1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onTakeAPicture"/>
</LinearLayout>
</ScrollView>